# gmail-to-notebooklm

./: .env.example  .flake8  .gitignore  .gmail-to-notebooklm.yaml.example  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  DISTRIBUTION.md  GEMINI.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  OAUTH_SETUP.md  PHASE1_ISSUES.md  PHASE1_ROADMAP.md  QUICKSTART.md  README.md  ROADMAP.md  SIMPLIFIED_SETUP.md  USAGE.md  coverage.xml  export_profiles.json  g2n-gui.spec  g2n.spec  installer.iss  pyproject.toml  pytest.ini  requirements.md  requirements.txt  setup.py  setup_path.ps1  shell.nix
.claude/: settings.local.json
docs/: ADMIN_SETUP.md  ADVANCED_SETUP.md  BETA_ACCESS.md  BUILD_INSTALLER.md  CONFIGURATION.md  DEVELOPMENT.md  FEATURES_GUIDE.md  GETTING_HELP.md  PRIVACY_POLICY.md  README.md  SETUP_WINDOWS.md  TROUBLESHOOTING.md  USAGE.md
examples/: README.md  sample_config.yaml  sample_credentials.json
gmail_to_notebooklm/: __init__.py  audit.py  auth.py  config.py  converter.py  core.py  encryption.py  gmail_client.py  history.py  main.py  parser.py  profiles.py  rate_limiter.py  utils.py  validation.py
gmail_to_notebooklm/data/: .gitkeep  README.md  __init__.py
gmail_to_notebooklm/gui/: __init__.py  app.py  main.py
gmail_to_notebooklm/gui/windows/: __init__.py  export_dialog.py  history_dialog.py  main_window.py  oauth_wizard.py  profiles_dialog.py  settings_dialog.py
tests/: __init__.py  conftest.py  test_audit.py  test_auth.py  test_config.py  test_converter.py  test_encryption.py  test_parser.py  test_rate_limiter.py  test_utils.py  test_validation.py
